# python-edubag

./: .gitignore  API_CLEANUP_SUMMARY.md  BREAKING_CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  justfile  mkdocs.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
.github/workflows/: docs.yml  test.yml
docs/: cli.md  index.md  installation.md  usage.md
docs/api/: albert.md  brightspace.md  edstem.md  edubag.md  gmail.md  gradescope.md
src/edubag/: __init__.py  __main__.py  aggregator.py  cli.py  clients.py  sources.py  transformers.py
src/edubag/albert/: __init__.py  client.py  roster.py  term.py
src/edubag/brightspace/: __init__.py  attendance.py  client.py  gradebook.py
src/edubag/edstem/: __init__.py  analytics.py  client.py
src/edubag/gmail/: __init__.py  filters.py
src/edubag/gradescope/: __init__.py  assignment.py  client.py  course.py  pdfutils.py  roster.py  scan.py  scoresheet.py
tests/: __init__.py  debug_mark_engaged.template.py  test_albert_client.py  test_brightspace_client.py  test_edstem_client.py  test_edubag.py  test_gradescope_client.py  test_gradescope_course_assignment.py  test_gradescope_roster_sections.py
tests/fixtures/: gradebook.csv  roster.csv
