[project]
name = "python-edubag"
version = "0.1.0"
description = "Python tools for Bootstrapping, Aggregating, and Gathering learner data"
readme = "README.md"
authors = [
  {name = "Matthew Leingang", email = "leingang@nyu.edu"}
]
maintainers = [
  {name = "Matthew Leingang", email = "leingang@nyu.edu"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "loguru",
  "rich"
]
requires-python = ">= 3.13"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/leingang/edubag/issues"
changelog = "https://github.com/leingang/edubag/blob/master/changelog.md"
homepage = "https://github.com/leingang/edubag"

[project.scripts]
edubag = "edubag.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
